--- a/Dionysus Watch App/Interface.storyboard
+++ b/Dionysus Watch App/Interface.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="6221" systemVersion="14A389" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="6221" systemVersion="14B25" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6213"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="3734"/>
@@ -10,12 +10,17 @@
             <objects>
                 <controller id="AgC-eL-Hgc" customClass="DionysusInterfaceController" customModule="Dionysus_WatchKit_Extension">
                     <items>
-                        <button width="1" alignment="left" title="Generate" id="Rfj-cb-rmy">
+                        <button width="1" alignment="left" title="Token" id="Rfj-cb-rmy">
                             <connections>
                                 <action selector="generateAuth" destination="AgC-eL-Hgc" id="Xhw-8p-nm5"/>
                             </connections>
                         </button>
-                        <imageView height="81" alignment="left" image="original.jpg" contentMode="scaleAspectFit" id="PYt-Ks-dSF"/>
+                        <button width="1" alignment="left" title="Devices" id="vV8-C7-Her">
+                            <connections>
+                                <action selector="fetchDevices" destination="AgC-eL-Hgc" id="WbJ-Gg-a9N"/>
+                            </connections>
+                        </button>
+                        <imageView height="81" alignment="left" image="original" contentMode="scaleAspectFit" id="PYt-Ks-dSF"/>
                         <label alignment="left" text="Da Cat Man" minimumScaleFactor="0.20000000000000001" id="Ix3-td-8Yv"/>
                     </items>
                     <connections>
